alguns ajustes no login referente ao admin realizar um cadastro para o usuário e outros ajustes